# emissions-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: dbt_ci.yml
dags/: emissions_analytics_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: dim_country.sql  fct_country_ranking.sql
dbt/models/staging/: sources.yml  staging.yml  stg_owid__co2.yml  stg_worldbank__indicators.sql
ingestion/: owid_to_bq.py  worldbank_to_bq.py
